--- a/client/src/shared/ui/modal/modal.module.css
+++ b/client/src/shared/ui/modal/modal.module.css
@@ -12,6 +12,8 @@
     z-index: 1111;
     padding: 20px;
     max-height: 90%;
+
+    overflow: auto;
 }
 
 .Modal__nav {
@@ -38,4 +40,34 @@
     backdrop-filter: blur(2px);
     z-index: 111;
     overflow: hidden;
+}
+
+
+
+:root {
+    --scrollbarBgColor: rgba(0, 0, 0, .05);
+    --scrollbarThumbColor: rgba(0, 0, 0, .15);
+    --scrollbarThumbColorSecond: rgba(255, 255, 255, .7);
+    --scrollbarWidth: 2rem;
+    --scrollbarBorder: 0 solid var(--scrollbarBgColor);
+    --scrollbarBorderRadius: calc(var(--scrollbarWidth) / 4);
+}
+.Modal::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 0 rgba(0,0,0,0.3);
+    border-radius: 0;
+    background-color: #F5F5F5;
+}
+
+.Modal::-webkit-scrollbar
+{
+    width: 8px;
+    background-color: #F5F5F5;
+}
+
+.Modal::-webkit-scrollbar-thumb
+{
+    border-radius: 5px;
+    /*-webkit-box-shadow: inset 0 0 6px #003c94;*/
+    background-color: #a8a8a8;
 }
