drawer added, swiper cards from lib added, fullpage scrolling added

--- a/client/src/assets/css/global.css
+++ b/client/src/assets/css/global.css
@@ -92,6 +92,7 @@ body {
 	color: var(--color-text);
 	height: 100vh;
 	transition: background-color 200ms linear, color 500ms linear, border-color 500ms linear;
+	overflow: hidden;
 }
 
 /*body::-webkit-scrollbar {*/
