swiper card view stable to sizes of display(vh), scrollbar invisible for fullpagecontainer, blur bg for card

--- a/client/src/shared/ui/box/box.module.css
+++ b/client/src/shared/ui/box/box.module.css
@@ -1,4 +1,6 @@
 .box {
+    max-width: 600px;
+    margin: 0 auto;
     /*height: 100%;*/
     /*padding: 0 20px;*/
     /*padding-bottom: 155px;*/
@@ -7,6 +9,9 @@
     /*overflow: auto;*/
     padding-bottom: 40px;
 }
+
+
+
 .box--navbar {
     padding-top: 63px;
 }
