--- a/client/src/shared/ui/fullscroll/FullScrollPage.module.css
+++ b/client/src/shared/ui/fullscroll/FullScrollPage.module.css
@@ -1,12 +1,48 @@
 .FullScrollPage {
     position: relative;
     height: 100vh;
-    padding-top: 65px;
+    padding-top: 10px;
     scroll-snap-align: start;
+}
+.FullScrollPage:first-child {
+    background-color: var(--color-main);
 }
 .FullScrollPageContainer {
     height: 100vh;
     scroll-snap-type: y mandatory;
     overflow: auto;
+}
 
+
+:root {
+    --scrollbarBgColor: rgba(0, 0, 0, .05);
+    --scrollbarThumbColor: rgba(0, 0, 0, .15);
+    --scrollbarThumbColorSecond: rgba(255, 255, 255, .7);
+    --scrollbarWidth: 2rem;
+    --scrollbarBorder: 0 solid var(--scrollbarBgColor);
+    --scrollbarBorderRadius: calc(var(--scrollbarWidth) / 4);
+}
+.FullScrollPageContainer::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 0 rgba(0,0,0,0.3);
+    border-radius: 0;
+    background-color: #F5F5F5;
+    opacity: 0;
+}
+
+.FullScrollPageContainer::-webkit-scrollbar
+{
+    display: none;
+    /*width: 8px;*/
+    /*background-color: #F5F5F5;*/
+    /*opacity: 0;*/
+
+}
+
+.FullScrollPageContainer::-webkit-scrollbar-thumb
+{
+    border-radius: 5px;
+    /*-webkit-box-shadow: inset 0 0 6px #003c94;*/
+    background-color: #a8a8a8;
+    opacity: 0;
 }
