--- a/client/src/widgets/SwiperCard/SwiperCard.module.css
+++ b/client/src/widgets/SwiperCard/SwiperCard.module.css
@@ -1,6 +1,10 @@
 :global(.swiper) {
-    width: 240px;
-    height: 320px;
+    width: 32vh;
+    height: 52vh;
+    /*width: 70%;*/
+    /*height: 44%;*/
+    /*width: 44%;*/
+    /*height: 70%;*/
 }
 
 :global(.swiper-slide) {
@@ -51,4 +55,24 @@
 
 :global(.swiper-slide:nth-child(10n)) {
     background-color: rgb(54, 94, 77);
+}
+.swiperDiv {
+    position: relative;
+    padding: 20px 0;
+    width: 100%;
+    height: 65%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.swiperContainer {
+    z-index: 8;
+}
+.swiperBg {
+    position: absolute;
+    filter: blur(80px);
+    opacity: .7;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
