container scroll style, simple container is about nothing, appbar bg, box smth paddings removed by component attributes not css, button with lighting shadow style, drawer changed just isextended or not so without realtime change a height, fullscrollpage paddingtop style, appfooter remove useless components as container, added desktop and mobile tablet checks, create book chandeg window scroll to container scroll

--- a/client/src/shared/ui/box/box.module.css
+++ b/client/src/shared/ui/box/box.module.css
@@ -1,6 +1,6 @@
 .box {
-    max-width: 600px;
-    margin: 0 auto;
+    /*max-width: 600px;*/
+    /*margin: 0 auto;*/
     /*height: 100%;*/
     /*padding: 0 20px;*/
     /*padding-bottom: 155px;*/
@@ -45,5 +45,19 @@
 
 }
 .container--wrapper {
-    padding: 10px;
+    /*padding: 10px;*/
+    position: relative;
+    z-index: 3;
+}
+
+.container--scrollable {
+    padding: 0;
+}
+
+@media (min-width:770px){
+    .container--scrollable {
+        /*padding: 10px;*/
+        overflow: auto;
+        padding-top: 80px;
+    }
 }
