--- a/client/src/shared/ui/app_bar/appbar.module.css
+++ b/client/src/shared/ui/app_bar/appbar.module.css
@@ -6,7 +6,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: var(--color-bg);
+    background: hsla(0,0%,97%,.5);
+    backdrop-filter: blur(40px);;
     /*background-color: white;*/
     z-index: 11;
     min-height: 64px;
