--- a/client/src/shared/ui/drawer/Drawer.module.css
+++ b/client/src/shared/ui/drawer/Drawer.module.css
@@ -1,28 +1,58 @@
 .Drawer {
+    /*display: none;*/
     width: 100%;
     position: fixed;
     bottom: 0;
     left: 0;
-    border-radius: 12px 12px 0 0;
-    padding: 15px;
-    background-color: #fff;
-    height: 200px;
+    height: 30%;
     z-index: 11;
-    transition: all .3s;
+    transition: all .5s ;
+    /*transition: bottom .8s;*/
+}
+.Drawer__wrapper {
+    /*width: 100%;*/
+    border-radius: 25px 25px 0 0;
+    padding: 0 15px 15px 15px;
+    background-color: #fff;
+
+}
+.Drawer__buttons {
+    padding: 10px 15px;
 }
 .Drawer--extended {
+    /*display: block;*/
     height: 80%;
+}
+.Drawer--medium-extend {
+    /*display: block;*/
+    height: 20%;
 }
 
 .Drawer__header {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 5px;
-    background-color: silver;
+    padding: 20px;
+    /*background-color: silver;*/
 }
 .Drawer--extended .Drawer__content {
     height: 100%;
     overflow: auto;
     padding-bottom: 70px;
+}
+.Drawer__line {
+    position: absolute;
+    top: 12px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 60px;
+    height: 5px;
+    background-color: #c3d1e7;
+    border-radius: 2px;
+}
+
+.Drawer--hidden {
+    bottom: -1000px;
+    transition: all .7s;
 }
