--- a/client/src/shared/ui/app_bar/appbar.module.css
+++ b/client/src/shared/ui/app_bar/appbar.module.css
@@ -6,9 +6,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: hsla(0,0%,97%,.5);
-    backdrop-filter: blur(40px);;
-    /*background-color: white;*/
+    /*background: hsla(0,0%,97%,.5);*/
+    /*backdrop-filter: blur(40px);*/
+    /*background: rgba(49,49,49,.8);*/
+    background-color: white;
     z-index: 11;
     min-height: 64px;
     /*border-radius: 12px;*/
