--- a/client/src/shared/ui/toggle_button/toggleButton.module.css
+++ b/client/src/shared/ui/toggle_button/toggleButton.module.css
@@ -2,20 +2,22 @@
     width: auto;
     display: flex;
     align-items: center;
-    border-radius: 16px;
+    border-radius: 6px;
     background-color: #f0f0f0c9;
     padding: 2px;
+    margin-bottom: 6px;
 }
 
 .toggleButton {
     width: 100%;
-    border-radius: 16px;
-    padding: 6px 10px;
+    border-radius: 6px;
+    padding: 6px 8px;
     text-align: center;
     cursor: pointer;
+    font-size: 14px;
 }
 
 .toggleButton--active {
-    background-color: #003c94;
+    background-color: #858585;
     color: white;
 }
