--- a/client/src/widgets/SwiperCard/SwiperCard.module.css
+++ b/client/src/widgets/SwiperCard/SwiperCard.module.css
@@ -1,6 +1,6 @@
 :global(.swiper) {
-    width: 36vh;
-    height: 57vh;
+    width: 32.5vh;
+    height: 52vh;
     /*width: 70%;*/
     /*height: 44%;*/
     /*width: 44%;*/
@@ -15,47 +15,60 @@
     font-size: 22px;
     font-weight: bold;
     color: #fff;
+    background-color: #bdbdbd;
 }
 
-:global(.swiper-slide:nth-child(1n)) {
-    background-color: rgb(206, 17, 17);
+.swiper__addbook {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.swiper__plus {
+    font-size: 72px;
+    font-weight: 400;
 }
 
-:global(.swiper-slide:nth-child(2n)) {
-    background-color: rgb(0, 140, 255);
-}
+/*:global(.swiper-slide:nth-child(1n)) {*/
+/*    background-color: rgb(206, 17, 17);*/
+/*}*/
 
-:global(.swiper-slide:nth-child(3n)) {
-    background-color: rgb(10, 184, 111);
-}
+/*:global(.swiper-slide:nth-child(2n)) {*/
+/*    background-color: rgb(0, 140, 255);*/
+/*}*/
 
-:global(.swiper-slide:nth-child(4n)) {
-    background-color: rgb(211, 122, 7);
-}
+/*:global(.swiper-slide:nth-child(3n)) {*/
+/*    background-color: rgb(10, 184, 111);*/
+/*}*/
 
-:global(.swiper-slide:nth-child(5n)) {
-    background-color: rgb(118, 163, 12);
-}
+/*:global(.swiper-slide:nth-child(4n)) {*/
+/*    background-color: rgb(211, 122, 7);*/
+/*}*/
 
-:global(.swiper-slide:nth-child(6n)) {
-    background-color: rgb(180, 10, 47);
-}
+/*:global(.swiper-slide:nth-child(5n)) {*/
+/*    background-color: rgb(118, 163, 12);*/
+/*}*/
 
-:global(.swiper-slide:nth-child(7n)) {
-    background-color: rgb(35, 99, 19);
-}
+/*:global(.swiper-slide:nth-child(6n)) {*/
+/*    background-color: rgb(180, 10, 47);*/
+/*}*/
 
-:global(.swiper-slide:nth-child(8n)) {
-    background-color: rgb(0, 68, 255);
-}
+/*:global(.swiper-slide:nth-child(7n)) {*/
+/*    background-color: rgb(35, 99, 19);*/
+/*}*/
 
-:global(.swiper-slide:nth-child(9n)) {
-    background-color: rgb(218, 12, 218);
-}
+/*:global(.swiper-slide:nth-child(8n)) {*/
+/*    background-color: rgb(0, 68, 255);*/
+/*}*/
 
-:global(.swiper-slide:nth-child(10n)) {
-    background-color: rgb(54, 94, 77);
-}
+/*:global(.swiper-slide:nth-child(9n)) {*/
+/*    background-color: rgb(218, 12, 218);*/
+/*}*/
+
+/*:global(.swiper-slide:nth-child(10n)) {*/
+/*    background-color: rgb(54, 94, 77);*/
+/*}*/
 .swiperDiv {
     position: relative;
     padding: 20px 0;
@@ -73,7 +86,7 @@
 .swiperBg {
     position: absolute;
     filter: blur(80px);
-    opacity: .7;
+    opacity: .8;
     width: 100%;
     height: 100%;
     z-index: 1;
