--- a/client/src/shared/ui/drawer/Drawer.module.css
+++ b/client/src/shared/ui/drawer/Drawer.module.css
@@ -4,7 +4,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    height: 30%;
+    height: 35%;
     z-index: 11;
     transition: all .5s ;
     /*transition: bottom .8s;*/
@@ -18,6 +18,9 @@
 
 }
 .Drawer__buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 10px 15px;
 }
 .Drawer--extended {
@@ -42,7 +45,7 @@
 .Drawer--extended .Drawer__content {
     height: 100%;
     overflow: auto;
-    padding-bottom: 130px;
+    padding-bottom: 200px;
 }
 .Drawer__line {
     position: absolute;
