--- a/client/src/widgets/books_counter/BooksCounter.module.css
+++ b/client/src/widgets/books_counter/BooksCounter.module.css
@@ -5,9 +5,22 @@
     transform: translateX(-50%);
     padding: 8px 15px;
     border-radius: 8px;
-    background: hsl(0, 0%, 100%);
+    /*background: hsl(0, 0%, 100%);*/
     backdrop-filter: blur(40px);
     z-index: 12;
+    color: white;
+    font-size: 12px;
 }
 
+.BooksCounter--vote {
+    width: fit-content;
+    top: auto;
+    left: auto;
+    transform: none;
+    position: relative;
+    margin-bottom: 10px;
+    font-size: 18px;
+    font-weight: 700;
+    /*background-color: var(--color-main);*/
+}
 
