voteTimer mobile, desktop version, Button outline white variant, createBook and createBookForm arch of components modified

--- a/client/src/shared/ui/button/button.module.css
+++ b/client/src/shared/ui/button/button.module.css
@@ -100,3 +100,8 @@
     background-color: #eb6900;
     color: white;
 }
+.btn--outline-white {
+    background: none;
+    border: 1px solid white;
+    color: white;
+}
