--- a/client/src/widgets/vote_timer/VoteTimer.module.css
+++ b/client/src/widgets/vote_timer/VoteTimer.module.css
@@ -1,11 +1,41 @@
 .VoteTimer {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     /*background-color: #fff;*/
     padding: 20px;
     border-radius: 10px;
     margin-top: 10px;
+    color: white;
+}
+
+.VoteTimer__title {
+    font-size: 36px;
+    /*text-align: center;*/
+    text-transform: capitalize;
+    margin-bottom: 30px;
+    line-height: 45px;
+}
+
+.VoteTimer__description {
+    font-size: 18px;
+    /*color: #e1e1e1;*/
+    margin-bottom: 5px;
+}
+
+.VoteTimer__timer {
+    font-size: 36px;
+    /*font-weight: 800;*/
 }
 
 
+@media (min-width:770px){
+    .VoteTimer {
+        width: 100%;
+        max-width: 620px;
+        align-items: center;
+        /*max-width: 600px;*/
+        margin: 0 auto;
+        color: black;
+    }
+}
