--- a/client/src/shared/ui/box/box.module.css
+++ b/client/src/shared/ui/box/box.module.css
@@ -1,7 +1,7 @@
 .box {
     /*max-width: 600px;*/
     /*margin: 0 auto;*/
-    /*height: 100%;*/
+    height: 100%;
     /*padding: 0 20px;*/
     /*padding-bottom: 155px;*/
     /*padding-bottom: 210px;*/
@@ -51,7 +51,11 @@
 }
 
 .container--scrollable {
+    height: 100%;
     padding: 0;
+}
+.box--horizontal-center {
+    align-items: center;
 }
 
 @media (min-width:770px){
