vote sending, vote view setting, set name, repo pattern, global context, use hooks aka entitties handlers, timer, date for human, check for email and tg confirm, tg confirmation, smth clearer

--- a/client/src/shared/ui/horizontal_list/horizontalList.module.css
+++ b/client/src/shared/ui/horizontal_list/horizontalList.module.css
@@ -80,11 +80,14 @@
 .HorizontalList__title {
     font-size: 28px;
     font-weight: 600;
+    color: white;
 }
 .HorizontalList__description {
     font-size: 18px;
     /*color: grey;*/
     margin-top: 4px;
+    color: #f8f8f8;
+    font-weight: 400;
 }
 .HorizontalList__header {
     display: flex;
@@ -126,4 +129,10 @@
 }
 .HorizontalList-item--show-all {
     width: 200px;
+}
+
+@media (min-width:770px) {
+    .HorizontalList__title, .HorizontalList__description {
+        color: black;
+    }
 }
