--- a/client/src/shared/ui/block/block.module.css
+++ b/client/src/shared/ui/block/block.module.css
@@ -6,7 +6,10 @@
 .block--center {
     align-items: center;
 }
-
+.block--centerY {
+    height: 100%;
+    justify-content: center;
+}
 .block--wrapper {
     /*padding: 20px;*/
     border-radius: 12px;
