--- a/client/src/widgets/event/event_card/eventCard.module.css
+++ b/client/src/widgets/event/event_card/eventCard.module.css
@@ -47,7 +47,7 @@ input select 16
     width: 100%;
     height: 100%;
     border-radius: 12px 12px 0 0;
-    background-color: #929292;
+    background-color: #ffa700;
 }
 .event-card__body {
     height: 100%;
