--- a/client/src/shared/ui/table/table.module.css
+++ b/client/src/shared/ui/table/table.module.css
@@ -15,7 +15,7 @@
     box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.06);
     border-spacing: 0;
     font-size: 14px;
-    border-radius: 20px;
+    border-radius: 6px;
     background-color: white;
 }
 .table th, td {
@@ -26,10 +26,9 @@
 }
 .table th {
     padding: 16px;
-    font-weight: 700;
-    color: white;
-    background-color:#1e262f;
-    border-color: rgb(51, 51, 51);
+    font-weight: 600;
+    color: black;
+    border-color: rgb(206, 206, 206);
 }
 
 .table tr:last-child td {
@@ -51,18 +50,30 @@
     position: relative;
 }
 .table th:first-child {
-    border-radius: 20px 0 0 0;
+    border-radius: 6px 0 0 0;
 }
 .table th:last-child {
-    border-radius: 0 20px 0 0;
+    border-radius: 0 6px 0 0;
 }
 .table tr:last-child td:first-child {
-    border-radius: 0 0 0 20px;
+    border-radius: 0 0 0 6px;
 }
 .table tr:last-child td:last-child {
-    border-radius: 0 0 20px 0;
+    border-radius: 0 0 6px 0;
 }
 .table tbody tr:hover {
     opacity: 70%;
     cursor: pointer;
+}
+.table tr:nth-child(2n - 1) {
+    background-color: #eeeeee;
+}
+.table thead tr {
+    background-color: white !important;
+}
+.table thead {
+    position: sticky;
+    top: 0;
+    background: white;
+    z-index: 1;
 }
